# firefly

./: .gitignore  MANIFEST.in  README.md  auto_retrieval.py  example.py  firefly.ipynb  main.py  pyproject.toml  retrieval.py  run.py  runray.py  setup.py  target.py  targets.py
docs/: conf.py  index.md  index.rst
firefly/: __init__.py  _archive.py  _plot.py  _search.py  _utils.py  auto_retrieval.py  deprecated.py  query.py  retrieval.py  workbook.ipynb
firefly/Project Serenity/: model.pkl  model_best.pkl  mr_forecast.py  serenity.py  workbook.ipynb
firefly/Project Serenity/data/: nasa_product_list.csv
firefly/data/: all.csv  spear.csv
firefly/data/Candidates/: 13_sector_candidates.csv  14_sector_candidates.csv  15_sector_candidates.csv  16_sector_candidates.csv  17_sector_candidates.csv  18_sector_candidates.csv  19_sector_candidates.csv
firefly/data/Filters/: MAST_lc.csv.xz  all_tess_viable.csv  client_secrets.json  eu_tess_viable.csv  fireflycreds.txt  nasa_tess_viable.csv  org_tess_viable.csv  summary_master.csv  tess_ttv_viable.csv  tess_viable.csv  viable.csv
firefly/data/Search/: TESS_lc.csv.xz  TESS_lc_fast.csv.xz
firefly/data/Targets/: all_tess_viable.csv  eu_tess_viable.csv  nasa_product_list.csv.xz  nasa_tess_viable.csv  nasa_tess_viable_fast.csv  org_tess_viable.csv
firefly/data/candidates/: 10_sector_candidates.csv  11_sector_candidates.csv  12_sector_candidates.csv  13_sector_candidates.csv  14_sector_candidates.csv  15_sector_candidates.csv  16_sector_candidates.csv  17_sector_candidates.csv  (+10 more)
retrieval/: __init__.py  retrieval.py
